# sheildpoint

./: LANGFUSE_DEPLOYMENT.md  Makefile  README 2.md  README.md  SP_405_500_501_502_503_205_README.md  STATE_MACHINE_V2_README.md  docker-compose.yml  logs.sh  smoke-test.sh  start.sh  status.sh  stop.sh
agent_framework/: __init__.py
agent_framework/config/: __init__.py
agent_framework/observability/: __init__.py  langfuse_wrapper.py  requirements.txt
claim_intake/: Dockerfile  README.md  pyproject.toml  requirements.txt
claim_intake/scripts/: make_sample_fax.py  run_load_test.py
claim_intake/src/claim_intake/: __init__.py  api.py  config.py  email_poller.py  extractor.py  ocr.py  pipeline.py  schemas.py  store.py  validator.py
claim_intake/tests/: conftest.py  test_api.py  test_email_poller.py  test_extractor.py  test_load.py  test_ocr.py  test_pipeline.py  test_validator.py
coordination_layer/: __init__.py  api.py
download/baseline_metrics/: baseline_metrics.json
download/dataset/: DATASET_README.md  dataset_manifest.json  test.csv  test.jsonl  train.csv  train.jsonl  val.csv  val.jsonl
download/eval/: automated_eval.py  demo_predictions.jsonl  eval_report.json  eval_report.junit.xml  eval_report.md
download/langfuse/: dry_run_full.jsonl  dry_run_sample.json  upload_to_langfuse.py
scripts/: generate_baseline_metrics.py  generate_dataset.py  inference-bench.py  langfuse-bootstrap.py  langfuse-down.sh  langfuse-gen-secrets.sh  langfuse-up.sh  test-langfuse-trace.py  verify-lm-studio-desktop.sh  vram-check.sh  wait-for-health.sh
scripts/clickhouse/: listen-ipv4.xml
scripts/lib/: common.sh
shieldpoint_agents/: Dockerfile  README.md  docker-compose.agent.yml  pyproject.toml
shieldpoint_agents/src/shieldpoint_agents/: __init__.py  _bootstrap.py  _lmstudio.py  _testing.py  agent.py  api.py  claims_extraction.py  claims_extraction_fixtures.py  claims_tools.py  confidence.py  config.py  conflict.py  escalation.py  eval_harness.py  example.py  fallback.py  financial_engine.py  manager.py  manager_example.py  manager_schemas.py  memory.py  schemas.py  sentiment.py  specialists.py  tools.py  tracer.py
shieldpoint_agents/src/shieldpoint_agents/v2/: __init__.py  agents.py  silos.py
shieldpoint_agents/src/shieldpoint_agents/v2/payout/: __init__.py  ach_provider.py  audit_record.py  ledger.py  notification.py  receipt_generator.py
shieldpoint_agents/tests/: conftest.py  test_agent.py  test_claims_extraction.py  test_claims_tools.py  test_confidence.py  test_cross_agent_zkp.py  test_episodic_memory_sp305.py  test_escalation.py  test_eval_harness.py  test_fallback.py  test_financial_engine.py  test_integration.py  test_manager_agent.py  test_react_loop.py  test_sentiment.py  test_tools.py  test_tracer.py
state_machine_engine/src/state_machine_engine/: __init__.py  state_machine.py
tests/: requirements.txt  test_langfuse_wrapper.py
tests/v2/: conftest.py  test_coordination_layer.py  test_fraud_detection.py  test_fraud_integration.py  test_lora_training.py  test_non_membership_circuit.py  test_payout_agent.py  test_state_machine_integration.py
tool_registry/: README.md  pyproject.toml  requirements.txt
tool_registry/shieldpoint/: __init__.py  db.py  langfuse_span.py  state_machine.py  tool_registry.py  zkp.py
tool_registry/shieldpoint/tools/: __init__.py
tool_registry/tests/: conftest.py  test_tool_registry.py  test_zkp_tools.py
training/: evaluate_adapter.py  lora_train.py  mmlu_benchmark.py  package_adapter.py  prepare_training_data.py  weekly_eval_pipeline.py
zkp_circuit/: Makefile  README.md  cross_agent_prover.py  generate_test_vectors.js  package.json  test_integration.py  zkp_prover.py
zkp_circuit/circuits/: compliance_verification.circom  cross_agent_claim_limit.circom  non_membership.circom  policy_validity.circom
zkp_circuit/compliance/: REGULATORY_CONSTRAINTS.md  __init__.py  compliance_prover.py
zkp_circuit/fraud_detection/: __init__.py  client.py  commitment.py  merkle_tree.py  non_membership_prover.py
